<resources>
    <string name="app_name">Grow On</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.name@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sell">Sell</string>
    <string name="menu_learning">Learn</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_buy">Buy</string>
    <string name="sell_add_product">Add Product</string>
    <string name="sell_prev_product">Previous Product</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>

    <string name="my_account">My Account</string>
    <string name="back">Back</string>
    <string name="api_key">AIzaSyAze5PVNEx8gHSqNe7Z42xLk5sm6MukRx0</string>
</resources>
