<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.team.sioh6.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_buy"
        android:name="com.team.sioh6.ui.buy.BuyFragment"
        android:label="@string/menu_buy"
        tools:layout="@layout/fragment_buy" />

    <fragment
        android:id="@+id/nav_sell"
        android:name="com.team.sioh6.ui.sell.SellFragment"
        android:label="@string/menu_sell"
        tools:layout="@layout/fragment_sell" />

    <!--<fragment
        android:id="@+id/nav_learning"
        android:name="com.team.sioh6.ui.learning.LearningFragment"
        android:label="@string/menu_learning"
        tools:layout="@layout/fragment_learning" />-->

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.team.sioh6.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.team.sioh6.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
</navigation>